Bug Fix background star overflow mobile

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -19,6 +19,17 @@
   opacity: 1;
   z-index: 1;
   transition: all ease-out 2s;
+  
+}
+
+.crop{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
 
 .backgroundFont{
